--- a/index.html
+++ b/index.html
@@ -149,8 +149,8 @@
           <div class="card-body">
             <h5 class="card-title">Ballads and Brews</h5>
             <p class="card-text">App populates concerts and restaurants near you NOW!</p>
-            <p class="card-text">Uses HTML, CSS, Bootstrap, jQuery,
-              and API documentation.</p>
+            <!-- <p class="card-text">Uses HTML, CSS, Bootstrap, jQuery,
+              and API documentation.</p> -->
           </div>
           <div class="card-footer">
             <a href="https://github.com/buley004/ballads-and-brews/" target="_blank" class="btn btn-primary"
@@ -166,9 +166,9 @@
           </div>
           <div class="card-body">
             <h5 class="card-title">Divvy</h5>
-            <p class="card-text">Household bill splitting app.</p>
-            <p class="card-text">Uses HTML, CSS, Bootstrap, jQuery, Sequelize/MySQL, Express and API
-              documentation.</p>
+            <p class="card-text">Household bill splitting app that databases your personal bills.</p>
+            <!-- <p class="card-text">Uses HTML, CSS, Bootstrap, jQuery, Sequelize/MySQL, Express and API
+              documentation.</p> -->
           </div>
           <div class="card-footer">
             <a href="https://github.com/jottobot/Divvy" class="btn btn-primary" id="cardbutton"
@@ -179,23 +179,40 @@
         <div class="card">
           <div class="zoom">
             <a href="http://lauraannsmyth.com" target="_blank">
-              <img class="card-img-top" src="images/Screen Shot 2019-10-08 at 1.05.26 PM.png" alt="Image of app"></a>
+              <img class="card-img-top" src="images/laurasite.png" alt="Image of app"></a>
             </a>
           </div>
           <div class="card-body">
             <h5 class="card-title">Laura Ann Smyth</h5>
             <p class="card-text">Dance Educator</p>
-            <p class="card-text">Uses HTML, CSS, Bootstrap, jQuery, JavaScript.</p>
+            <!-- <p class="card-text">Uses HTML, CSS, Bootstrap, jQuery, JavaScript.</p> -->
           </div>
-          <div class="card-footer">
+          <!-- <div class="card-footer">
             <a href="https://github.com/jottobot/laurasmyth" class="btn btn-primary" id="cardbutton"
               target="_blank">Github</a>
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
     <div class="row" id="projectcards2">
       <div class="card-group">
+        <!-- Clicky Game -->
+        <div class="card">
+          <div class="zoom">
+            <a href="https://master.d20287852bbruh.amplifyapp.com" target="_blank">
+              <img class="card-img-top" src="images/Screen Shot 2019-11-30 at 1.25.27 PM.png" alt="Image of app"></a>
+            </a>
+          </div>
+          <div class="card-body">
+            <h5 class="card-title">Liberation NYC</h5>
+            <p class="card-text">NYC Animal Rights Organization.</p>
+            <!-- <p class="card-text">Uses HTML, Bootstrap, CSS, Node JS, React JS.</p> -->
+          </div>
+          <!-- <div class="card-footer">
+            <a href="https://github.com/jottobot/Clicky-Game" class="btn btn-primary" id="cardbutton"
+              target="_blank">Github</a>
+          </div> -->
+        </div>
         <!-- Friend Finder -->
         <div class="card">
           <div class="zoom">
@@ -206,7 +223,7 @@
           <div class="card-body">
             <h5 class="card-title">Friend Finder</h5>
             <p class="card-text">Take a fun quiz to find a new best friend with your same interests!</p>
-            <p class="card-text">Uses HTML, Bootstrap, CSS, Javascript, Express, Node JS.</p>
+            <!-- <p class="card-text">Uses HTML, Bootstrap, CSS, Javascript, Express, Node JS.</p> -->
           </div>
           <div class="card-footer">
             <a href="https://github.com/jottobot/FriendFinder" class="btn btn-primary" id="cardbutton"
@@ -223,27 +240,10 @@
           <div class="card-body">
             <h5 class="card-title">Women's Health Article Scraper</h5>
             <p class="card-text">Site to provide the user with articles about beauty.</p>
-            <p class="card-text">Uses HTML, Bootstrap, CSS, Javascript, MongoDB/Mongoose.</p>
+            <!-- <p class="card-text">Uses HTML, Bootstrap, CSS, Javascript, MongoDB/Mongoose.</p> -->
           </div>
           <div class="card-footer">
             <a href="https://github.com/jottobot/Scraper" class="btn btn-primary" id="cardbutton"
-              target="_blank">Github</a>
-          </div>
-        </div>
-        <!-- Clicky Game -->
-        <div class="card">
-          <div class="zoom">
-            <a href="https://jottobot.github.io/Clicky-Game/" target="_blank">
-              <img class="card-img-top" src="./images/Screen Shot 2019-09-03 at 5.32.58 PM.png" alt="Image of app"></a>
-            </a>
-          </div>
-          <div class="card-body">
-            <h5 class="card-title">React Clicky Game</h5>
-            <p class="card-text">Click and memorize candy to get high score.</p>
-            <p class="card-text">Uses HTML, Bootstrap, CSS, Node JS, React JS.</p>
-          </div>
-          <div class="card-footer">
-            <a href="https://github.com/jottobot/Clicky-Game" class="btn btn-primary" id="cardbutton"
               target="_blank">Github</a>
           </div>
         </div>
@@ -263,12 +263,13 @@
       <div class="col">
         <p class="skills1">Programming</p>
         <hr class="line2">
-        <p class="skills2">UI Design, HTML, CSS, JavaScript, jQuery, SQL, Mongo, Node, React, Git, AWS </p>
+        <p class="skills2">HTML, CSS, UI/UX design, JavaScript, jQuery, React JS, Github, AWS </p>
       </div>
       <div class="col">
         <p class="skills1">Soft</p>
         <hr class="line2">
-        <p class="skills2">Communication, Multi-Tasking, Organization, Time Management, Positivity, Leadership, Public Speaking
+        <p class="skills2">Communication, Multi-Tasking, Organization, Management, Leadership, Public
+          Speaking
         </p>
       </div>
       <div class="col">
@@ -413,7 +414,8 @@
           <h4 class="contacttitle">Reach</h4>
           <hr class="line">
           <i class="fas fa-envelope"></i><br>
-          <a href="mailto:jordynn.otto@gmail.com?Subject=My%20website" class="contacttext2">jordynn.otto@gmail.com</a><br><br>
+          <a href="mailto:jordynn.otto@gmail.com?Subject=My%20website"
+            class="contacttext2">jordynn.otto@gmail.com</a><br><br>
           <i class="fas fa-mobile-alt"></i>
           <p class="contacttext2">206-909-5153</p>
           <i class="fas fa-map-marker-alt"></i>
