--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
     </h2>
     <hr>
     <!-- projects -->
-    <div class="row" id="projectcards">
+    <div class="projectcards">
       <div class="card-group">
         <!-- Ballads and brews -->
         <div class="card">
@@ -184,69 +184,54 @@
           </div>
           <div class="card-body">
             <h5 class="card-title">Laura Ann Smyth</h5>
-            <p class="card-text">Dance Educator</p>
+            <p class="card-text">Dance Educator.</p>
             <!-- <p class="card-text">Uses HTML, CSS, Bootstrap, jQuery, JavaScript.</p> -->
           </div>
-          <!-- <div class="card-footer">
-            <a href="https://github.com/jottobot/laurasmyth" class="btn btn-primary" id="cardbutton"
-              target="_blank">Github</a>
-          </div> -->
+          <div class="card-footer">
+            <p>HTML, CSS, Bootstrap, jQuery, Javascript.</p>
+          </div>
         </div>
       </div>
     </div>
-    <div class="row" id="projectcards2">
+
+    <!-- <a href="http://liberationnyc.com" target="_blank"></a> -->
+    <!--  -->
+  <!--  -->
+
+    <div class="projectcards">
       <div class="card-group">
-        <!-- Clicky Game -->
+        <!-- Liberation -->
         <div class="card">
           <div class="zoom">
-            <a href="https://master.d20287852bbruh.amplifyapp.com" target="_blank">
-              <img class="card-img-top" src="images/Screen Shot 2019-11-30 at 1.25.27 PM.png" alt="Image of app"></a>
+            <a href="http://liberationnyc.com" target="_blank">
+              <img class="card-img-top" src="images/Screen Shot 2019-11-30 at 1.25.27 PM.png" alt="Image of app">
             </a>
           </div>
           <div class="card-body">
             <h5 class="card-title">Liberation NYC</h5>
             <p class="card-text">NYC Animal Rights Organization.</p>
-            <!-- <p class="card-text">Uses HTML, Bootstrap, CSS, Node JS, React JS.</p> -->
+           
           </div>
-          <!-- <div class="card-footer">
-            <a href="https://github.com/jottobot/Clicky-Game" class="btn btn-primary" id="cardbutton"
-              target="_blank">Github</a>
-          </div> -->
+          <div class="card-footer">
+            <p>React, React-MDL, React Bootstrap, CSS, JavaScript.</p>
+          </div>
         </div>
-        <!-- Friend Finder -->
+        <!-- Seattle candle co -->
         <div class="card">
           <div class="zoom">
-            <a href="https://peaceful-tundra-44887.herokuapp.com/" target="_blank">
-              <img class="card-img-top" src="images/Screen Shot 2019-07-15 at 2.04.53 PM.png" alt="Image of app"></a>
+            <a href="https://www.seattlecandleco.com" target="_blank">
+              <img class="card-img-top" src="images/Screen Shot 2020-01-06 at 1.26.28 PM.png" alt="Image of app"></a>
             </a>
           </div>
           <div class="card-body">
-            <h5 class="card-title">Friend Finder</h5>
-            <p class="card-text">Take a fun quiz to find a new best friend with your same interests!</p>
-            <!-- <p class="card-text">Uses HTML, Bootstrap, CSS, Javascript, Express, Node JS.</p> -->
+            <h5 class="card-title">Seattle Candle Company</h5>
+            <p class="card-text">Seattle candle boutique.</p>
           </div>
           <div class="card-footer">
-            <a href="https://github.com/jottobot/FriendFinder" class="btn btn-primary" id="cardbutton"
-              target="_blank">Github</a>
+            <p>Squarespace.</p>
           </div>
         </div>
-        <!-- Mongo Scraper -->
-        <div class="card">
-          <div class="zoom">
-            <a href="https://arctic-backbacon-25416.herokuapp.com/" target="_blank">
-              <img class="card-img-top" src="./images/Screen Shot 2019-07-29 at 11.49.45 AM.png" alt="Image of app"></a>
-            </a>
-          </div>
-          <div class="card-body">
-            <h5 class="card-title">Women's Health Article Scraper</h5>
-            <p class="card-text">Site to provide the user with articles about beauty.</p>
-            <!-- <p class="card-text">Uses HTML, Bootstrap, CSS, Javascript, MongoDB/Mongoose.</p> -->
-          </div>
-          <div class="card-footer">
-            <a href="https://github.com/jottobot/Scraper" class="btn btn-primary" id="cardbutton"
-              target="_blank">Github</a>
-          </div>
-        </div>
+
       </div>
     </div>
     <!-- closing portfolio -->
@@ -263,7 +248,7 @@
       <div class="col">
         <p class="skills1">Programming</p>
         <hr class="line2">
-        <p class="skills2">HTML, CSS, UI/UX design, JavaScript, jQuery, React JS, Github, AWS </p>
+        <p class="skills2">HTML, CSS, UI/UX design, JavaScript, jQuery, React JS, Github, AWS, Squarespace, Wix </p>
       </div>
       <div class="col">
         <p class="skills1">Soft</p>
@@ -279,78 +264,6 @@
           Editing</p>
       </div>
     </div>
-
-    <!-- <div class="skillicons">
-      <div class="row">
-        <div class="col-md-1 col-xs-0"></div>
-        <div class="col">
-          <i class='fas fa-code' style="font-size:50px" id="contacticon"></i>
-          <br>
-          <p class="contacttext">HTML</p>
-        </div>
-
-        <div class="col">
-          <i class='fab fa-css3' style="font-size:50px" id="contacticon"></i>
-          <br>
-          <p class="contacttext">CSS</p>
-        </div>
-
-        <div class="col">
-          <span class="glyphicon glyphicon-bold" style="font-size:50px" id="contacticon"></span>
-          <br>
-          <p class="contacttext">Bootstrap</p>
-        </div>
-
-        <div class="col">
-          <i class="fab fa-js-square" style="font-size:60px" id="contacticon"></i>
-          <br>
-          <p class="contacttext">Javascript</p>
-        </div>
-
-        <div class="col">
-          <i class="fa fa-phone" style="font-size:50px" id="contacticon"></i>
-          <br>
-          <p class="contacttext">APIs</p>
-        </div>
-
-        <div class="col-md-1 col-xs-0"></div>
-      </div>
-
-      <div class="row">
-        <div class="col-md-1 col-xs-0"></div>
-        <div class="col">
-          <i class="fas fa-database" style="font-size:50px" id="contacticon"></i>
-          <br>
-          <p class="contacttext">MongoDB/Mongoose</p>
-        </div>
-
-        <div class="col">
-          <i class="fas fa-table" style="font-size:50px" id="contacticon"></i>
-          <br>
-          <p class="contacttext">mySQL/Sequelize</p>
-        </div>
-
-        <div class="col">
-          <i class="fab fa-node-js" style="font-size:50px" id="contacticon"></i>
-          <br>
-          <p class="contacttext">nodeJS/Express</p>
-        </div>
-
-        <div class="col">
-          <i class="fab fa-react" style="font-size:50px" id="contacticon"></i>
-          <br>
-          <p class="contacttext">React</p>
-        </div>
-
-        <div class="col">
-          <i class="fa fa-camera" style="font-size:50px" id="contacticon"></i>
-          <br>
-          <p class="contacttext">Photoshop</p>
-        </div>
-
-        <div class="col-md-1 col-xs-0"></div>
-      </div>
-    </div> -->
 
   </div>
 
@@ -446,45 +359,6 @@
     </div>
   </div>
 
-  <!-- <div class="row" id="contactrowone">
-      <div class="col-2 col-xs-0"></div>
-      <div class="col-md-4 col-xs-3">
-        <i class="fa fa-phone" style="font-size:48px" id="contacticon"></i>
-        <br>
-        <p class="contacttext">206-909-5153</p>
-      </div>
-
-      <div class="col-md-2 col-xs-3">
-        <i class="fa fa-envelope" style="font-size:52px" id="contacticon1"></i>
-        <br>
-        <p class="contacttext">jordynn.otto@gmail.com</p>
-      </div>
-      <div class="col-2 col-xs-0"></div>
-    </div>
-
-
-    <div class="row" id="row1">
-      <div class="col-md-1"></div>
-      <div class="col-md-3 col-xs-3">
-        <i class='fab fa-linkedin' style="font-size:48px" id="contacticon"></i>
-        <br>
-        <a href="https://www.linkedin.com/in/jordynn-otto-861918173/" id="contactlink" target="_blank">Linkedin</a>
-      </div>
-
-      <div class="col-md-3 col-xs-3">
-        <i class='fab fa-github' style="font-size:48px" id="contacticon"></i>
-        <br>
-        <a href="https://github.com/jottobot" id="contactlink" target="_blank">Github</a>
-      </div>
-
-      <div class="col-md-3 col-xs-3">
-        <i class="fa fa-file-text" style="font-size:48px" id="contacticon"></i>
-        <br>
-        <a href="assets/Jordynn Otto Resume.pdf" id="contactlink" target="_blank">Resume</a>
-      </div>
-      <div class="col-md-2"></div>
-    </div>
-  </div> -->
 
   <!-- jQuery -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -505,7 +379,7 @@
 <!-- Footer -->
 <footer class="page-footer">
   <div class="footer-copyright text-center py-3">
-    © 2019 Copyright: Jordynn Otto.
+    © 2020 Copyright: Jordynn Otto.
   </div>
 </footer>
 
